# code-mode

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  dist-workspace.toml  tempo-config.yaml
.codex/: config.toml
.github/workflows/: release.yml
code-mode/: Cargo.toml
code-mode/fixtures/: .mcp-echo-env.json  .mcp-hello-world.json  .mcp-server-anthropic.json  README.md  auth-required-server.mjs  code-mode.toml  echo-env-server.mjs  hello-world-server.mjs  package.json  pnpm-lock.yaml  test-env.ts  test-logs.ts  test-openai-codex.ts  test-openai-inference.ts  test-sdk.ts  tsconfig.json
code-mode/src/: main.rs
code-mode/src/mcp/: builtin.rs  config.rs  downstream.rs  generate.rs  mod.rs  server.rs  types.rs
code-mode/src/mcp/generate/: README.md  mod.rs  schema_to_ts.rs
code-mode/tests/: auth_required_fixture.rs  openai_codex_fixture.rs  openai_inference_fixture.rs
openai-codex-mcp/: Cargo.toml  README.md
openai-codex-mcp/src/: backend.rs  codex_cli.rs  config.rs  lib.rs  main.rs  mcp.rs
openai-codex-mcp/tests/: integration.rs
openai-inference-mcp/: Cargo.toml  README.md
openai-inference-mcp/src/: backend.rs  config.rs  jwt.rs  lib.rs  main.rs  mcp.rs
