[package]
name = "code-mode"
version = "0.1.0"
edition = "2024"
description = "CLI for aggregating MCP servers and generating TypeScript bindings for their tools"
homepage.workspace = true
license.workspace = true
readme = "../README.md"
repository.workspace = true

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dirs = "6"
figment = { version = "0.10", features = ["env"] }
rmcp = { version = "1", features = ["server", "client", "macros", "transport-io", "transport-child-process", "schemars"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
base64 = "0.22"
tempfile = "3"
