[package]
name = "openai-inference-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dirs = "6"
figment = { version = "0.10", features = ["env"] }
reqwest = { version = "0.12", default-features = false, features = ["charset", "http2", "json", "macos-system-configuration", "rustls-tls"] }
rmcp = { version = "1", features = ["macros", "schemars", "server", "transport-io"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

